testdata/baselines/reference/effect-v4/classSelfMismatch_service.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/classSelfMismatch_service.ts(10,51): error TS377046: Self type parameter should be 'WrongName'. effect(classSelfMismatch)


==== /.src/classSelfMismatch_service.ts (1 errors) ====
    import { ServiceMap, Effect } from "effect"
    
    // @effect-expect-leaking FileSystem Cache
    export class CorrectName extends ServiceMap.Service<CorrectName, {
      writeCache: () => Effect.Effect<void, never, FileSystem | Cache>
      readCache: Effect.Effect<void, never, FileSystem | Cache>
    }>()("CorrectName") {}
    
    // @effect-expect-leaking FileSystem Cache
    export class WrongName extends ServiceMap.Service<CorrectName, {
                                                      ~~~~~~~~~~~
!!! error TS377046: Self type parameter should be 'WrongName'. effect(classSelfMismatch)
      writeCache: () => Effect.Effect<void, never, FileSystem | Cache>
      readCache: Effect.Effect<void, never, FileSystem | Cache>
    }>()("WrongName") {}
    
